# backend/bracket/routes/models.py
@@ -12,6 +12,7 @@ from bracket.models.db.stage_item_inputs import (
 )
 from bracket.models.db.team import FullTeamWithPlayers, Team
 from bracket.models.db.tournament import Tournament
+from bracket.models.db.tournament_event import TournamentEvent
 from bracket.models.db.user import UserPublic
 from bracket.models.db.util import StageWithStageItems
 from bracket.routes.auth import Token
@@ -93,6 +94,14 @@ class CourtsResponse(DataResponse[list[Court]]):
 
 
 class SingleCourtResponse(DataResponse[Court]):
+    pass
+
+
+class TournamentEventsResponse(DataResponse[list[TournamentEvent]]):
+    pass
+
+
+class SingleTournamentEventResponse(DataResponse[TournamentEvent]):
     pass
 
 
